# Doba-Michaels-Update

./: main.py  pyproject.toml  run.bat  run_script.sh
data/: fox_price_updates.json
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
michaels/: client.py
